# taeam

./: CMakeLists.txt  Jenkinsfile  README.md  angular.json  package-lock.json  package.json
Downloads/personal/personal/: gatsby-config.js  package-lock.json  package.json
Downloads/restaurant-app_mach6/restaurant-app/: README.md  package.json
OneDrive/Documents/College Textbooks and Programs/2019-2020/CS 3251/CodingProblems/Assignment #3/assignment3_fixed/assignment3/: .travis.sh  .travis.yml  CMakeLists.txt
OneDrive/Documents/College Textbooks and Programs/2019-2020/CS 3251/CodingProblems/Assignment #3/assignment3_fixed/assignment3/include/: ArrayListIter.h  ScopedArray.h
OneDrive/Documents/College Textbooks and Programs/2019-2020/CS 3251/CodingProblems/Assignment #3/assignment3_fixed/assignment3/src/: ArrayList.cpp  ArrayListIter.cpp
OneDrive/Documents/College Textbooks and Programs/2019-2020/CS 3251/CodingProblems/Assignment #3/assignment3_fixed/assignment3/tests/: arrayIterTest.cpp  arrayTest.cpp  constArrayTest.cpp  main.cpp
include/: ArrayList.h
src/: ScopedArray.cpp  index.html  styles.css
src/app/: api-service.service.ts  app.component.html  app.module.ts  config.ts
src/app/detail-page/: detail-page.component.css  detail-page.component.html  detail-page.component.ts
src/app/event-detail/: event-detail.component.html  event-detail.component.ts
src/app/home/: home.component.css  home.component.html  home.component.ts
src/app/list-page/: list-page.component.css  list-page.component.html  list-page.component.ts
tests/: constArrayTest.cpp
(+44 files in other folders)
